fix th on smalles screens

--- a/app/src/scss/global.scss
+++ b/app/src/scss/global.scss
@@ -24,6 +24,10 @@
   }
   th {
     padding: 0 5px;
+    @media screen and (max-width: 756px) {
+      display: block;
+      text-align: left;
+    }
   }
 }
 .md-body > :first-child {
